alpine.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-pod
spec:
  containers:
  - image: alpine
    name: alpine-container
    imagePullPolicy: IfNotPresent

    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"

    command: ['sh', '-c', 'echo Container 1 is Running ; sleep 3600']

    volumeMounts:
      - mountPath: "/my-pv-path"
        name: mongo-volume

  volumes:
    - name: mongo-volume
      persistentVolumeClaim:
       claimName: mongo-pvc
