learn.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: learn-pod
spec:
  containers:
  - image: alpine
    name: learn-container
    imagePullPolicy: IfNotPresent

    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"

    command: ['sh', '-c', 'echo Container 1 is Running ; sleep 3600']

    volumeMounts:
      - mountPath: "/learn"
        name: learn-volume

  volumes:
    - name: learn-volume
      persistentVolumeClaim:
       claimName: learn-pvc
