mockserver.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-mockserver
  labels:
    app: my-mockserver-app
  namespace: default
spec:
  selector:
    matchLabels:
      app: my-mockserver-app
  template:
    metadata:
      labels:
        app: my-mockserver-app
    spec:
      containers:
      - name: my-mockserver-app
        image: mockserver/mockserver
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 1080
