mongodb.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb-app
  namespace: default
spec:
  selector:
    matchLabels:
      app: mongodb-app
  template:
    metadata:
      labels:
        app: mongodb-app
    spec:
      containers:
      - name: mongodb-app
        image: mongo
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-volume
          mountPath: "/data/db"
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: mongo-pvc
