mockserver.servcie.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-mockserver-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: my-mockserver-app
  ports:
  - port: 1080
    targetPort: 1080
