mongodb.servcie.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: mongodb-app
  ports:
  - port: 27017
    targetPort: 27017
