rabbitmq.servcie.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
  - name: amqp
    port: 5672 
    targetPort: 5672 
  - name: http
    port: 15672
    targetPort: 15672
