mockserver.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-mockserver
  labels:
    name: my-mockserver
spec:
  rules:
  - host: mockserver.rancher.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-mockserver-service
            port: 
              number: 1080
